force-app/main/default/objects/StripeLogEvent__e/StripeLogEvent__e.object-meta.xml
<CustomObject>
    <label>StripeLogEvent</label>
    <pluralLabel>StripeLogEvents</pluralLabel>
</CustomObject>