force-app/main/default/objects/StripeLogEvent__e/fields/StripeBody__c.field-meta.xml
<CustomField>
    <fullName>StripeBody__c</fullName>
    <label>StripeBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>