force-app/main/default/objects/StripeLogEvent__e/fields/StripeToken__c.field-meta.xml
<CustomField>
    <fullName>StripeToken__c</fullName>
    <label>StripeToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>